--- a/distributeProfile/ansible.cfg
+++ b/distributeProfile/ansible.cfg
@@ -7,7 +7,7 @@ ansible_python_interpreter      = /usr/bin/python2.6
 action_plugins                  = /usr/lib/python2.7/site-packages/ansible/runner/action_plugins
 ansible_connection              = ssh
 ansible_managed                 = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
-ask_pass                        = FALSE
+ask_pass                        = TRUE
 bin_ansible_callbacks           = TRUE
 callback_plugins                = /usr/lib/python2.7/site-packages/ansible/runner/callback_plugins
 command_warnings                = TRUE
@@ -16,7 +16,7 @@ deprecation_warnings            = TRUE
 display_skipped_hosts           = TRUE
 error_on_undefined_vars         = TRUE
 filter_plugins                  = /usr/lib/python2.7/site-packages/ansible/runner/filter_plugins
-forks                           = 50
+forks                           = 100
 gathering                       = smart
 inventory                       = hosts
 log_path                        = /home/khuntly/.log/ansible
@@ -32,14 +32,14 @@ vars_plugins                    = /usr/lib/python2.7/site-packages/ansible/runne
 fact_caching                    = redis
 
 [privilege_escalation]
-become                          = FALSE
+become                          = TRUE
 become_method                   = sudo
 become_user                     = root
 become_ask_pass                 = TRUE
 
 [ssh_connection]
-#ssh_args                        = -o ControlMaster=auto -o ControlPersist=60s
-#control_path                    = %(directory)s/ansible-ssh-%%h-%%p-%%r
+ssh_args                        = -o ControlMaster=auto -o ControlPersist=60s
+control_path                    = %(directory)s/ansible-ssh-%%h-%%p-%%r
 scp_if_ssh                      = FALSE
 
 [accelerate]
