--- a/emailops-build/ansible.cfg
+++ b/emailops-build/ansible.cfg
@@ -7,7 +7,7 @@ ansible_python_interpreter      = /usr/bin/python2.6
 action_plugins                  = /usr/lib/python2.7/site-packages/ansible/runner/action_plugins
 ansible_connection              = ssh
 ansible_managed                 = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
-ask_pass                        = FALSE ## This assumes keys are in use
+ask_pass                        = TRUE
 bin_ansible_callbacks           = TRUE
 callback_plugins                = /usr/lib/python2.7/site-packages/ansible/runner/callback_plugins
 command_warnings                = TRUE
@@ -30,6 +30,7 @@ system_warnings                 = TRUE
 timeout                         = 10
 vars_plugins                    = /usr/lib/python2.7/site-packages/ansible/runner/vars_plugins
 fact_caching                    = redis
+vault_password_file             = /home/khuntly/.etc/vault.txt
 
 [privilege_escalation]
 become                          = TRUE
