--- a/emailops-build/roles/build-zimbra/tasks/maildrop/add-client-data.yml
+++ b/emailops-build/roles/build-zimbra/tasks/maildrop/add-client-data.yml
@@ -7,20 +7,18 @@
 ## Add the configured domains...
 ##
 - name: (POSTINSTALL) Add client domains
-  command: "{{ install_dir }}/bin/zmprov cd {{ item }} zimbraAuthMech zimbra"
-  with_items: "{{ client_domains }}"
+  command: "{{ install_dir }}/bin/zmprov cd {{ item.name }} zimbraAuthMech zimbra"
+  with_items: client_domains
   become: yes
   become_user: zimbra
   become_method: sudo
-  when: client_domains is defined
 
 ##
 ## ...and then set hostnames
 ##
 - name: (POSTINSTALL) Add client domains
-  command: "{{ install_dir }}/bin/zmprov md {{ item }} zimbraPublicServiceHostname {{ public_host_name }}"
-  with_items: "{{ client_domains }}"
+  command: "{{ install_dir }}/bin/zmprov md {{ item.name }} zimbraPublicServiceHostname {{ item.public_host_name }}"
+  with_items: client_domains
   become: yes
   become_user: zimbra
   become_method: sudo
-  when: client_domains is defined
