--- a/emailops-build/group_vars/all/main.yml
+++ b/emailops-build/group_vars/all/main.yml
@@ -18,17 +18,19 @@ update_systems: FALSE
 ##
 ## client/datacenter information
 ##
-client_name: khuntly
-domain: kevin.com
+client_name: email
+domain: emailoperations.com
 datacenter: dev.opal
 
 ##
 ## client-specific attributes
 ##
 client_domains:
- - kevin.com
+ - name: emailoperations.com
+   public_host_name: emailoperations.com
+
 cos_list:
- - mycos
+ - emailops
 
 ##
 ## Installation data
@@ -77,15 +79,22 @@ pkg_version: 8.0.7_GA_6021.RHEL6_64-20140408123937
 build_ecmgr: FALSE
 disable_fsck: FALSE
 mailboxd_java_options: "-XX:+UseConcMarkSweepGC -XX:PermSize=128m -XX:MaxPermSize=350m -XX:SoftRefLRUPolicyMSPerMB=1 -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCApplicationStoppedTime -XX:-OmitStackTraceInFastThrow -XX:+UseParNewGC -XX:NewRatio=2 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/opt/zimbra/store/log -XX:ErrorFile=/opt/zimbra/log/hs_err_pid%p.log"
+mailboxd_jmx_options: "-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.password.file=/usr/lib/jvm/jre/lib/management/jmxremote.password -Dcom.sun.management.jmxremote.port=9121"
 tmpdir: /var/tmp
 install_packages: zimbra-core zimbra-ldap zimbra-apache zimbra-spell zimbra-store zimbra-memcached zimbra-proxy
 zimbra_version: 807
 zimbra_major_version: 8
-email_dest: khuntly@synacor.com
+email_dest: emailops@synacor.com
 enforce_ssl: FALSE
 create_default_accounts: FALSE
 apply_cos: FALSE
 apply_global_config: TRUE
+is_multimaster: TRUE
+pop3_throttle_ip_limit: 2000
+pop3_throttle_acct_limit: 2000
+imap_throttle_ip_limit: 2000
+imap_throttle_acct_limit: 2000
+install_synacor_skins_zimlets: TRUE
 
 ##
 ## ssl ciphers
