--- a/emailops-build/group_vars/ldap_master/disks.yml
+++ b/emailops-build/group_vars/ldap_master/disks.yml
@@ -1,10 +1,10 @@
 #=====  ANSIBLE   =============================================================
-#          NAME:  group_vars/maildrop.yml
+#          NAME:  group_vars/ldap
 #   DESCRIPTION:  Variables that apply to Zimbra maildrop installations
 #==============================================================================
 ---
-build_type: Zimbra Collaboration Server / Maildrop
-is_maildrop: TRUE
-apply_default_cos: TRUE
-apply_domains: FALSE
-use_scality: FALSE
+##
+## disks
+##
+mountpoints:
+  - name: /opt
