--- a/emailops-build/roles/build-zimbra/tasks/ldap/multimaster.yml
+++ b/emailops-build/roles/build-zimbra/tasks/ldap/multimaster.yml
@@ -12,7 +12,7 @@
   become: yes
   become_user: zimbra
   become_method: sudo
-  when: is_multimaster|bool and promote|bool
+  when: promote|bool
 
 ##
 ## this needs to be done on EVERY host
@@ -22,10 +22,8 @@
   become: yes
   become_user: zimbra
   become_method: sudo
-  when: is_multimaster|bool
 
 - command: "{{ install_dir }}/bin/ldap restart"
   become: yes
   become_user: zimbra
   become_method: sudo
-  when: is_multimaster|bool
