--- a/emailops-build/roles/build-zimbra/tasks/run-install.yml
+++ b/emailops-build/roles/build-zimbra/tasks/run-install.yml
@@ -10,12 +10,19 @@
   yum:
     name: "{{ item.name }}-{{ item.version }}"
     state: present
-  with_items: "{{ zimbra_packages|default([]) }}"
+  with_items: zimbra_packages
+  notify:
+    - sync puppet
 
-- name: Notify puppet
+- meta:
+    flush_handlers
+
+- name: (INSTALL) Sync with puppet master
   command: puppet agent -t
   ignore_errors: yes
 
 ##
 ## INSTALLATION COMPLETE
 ##
+
+
