--- a/emailops-build/roles/system-update/handlers/main.yml
+++ b/emailops-build/roles/system-update/handlers/main.yml
@@ -3,17 +3,7 @@
 #   DESCRIPTION:  Execute Zimbra restarts post-installation
 #==============================================================================
 ---
-- name: restart service
-  service:
-    name=zimbra
-    state=restarted
-
-- name: restart ldap
-  shell: "{{ install_dir }}/bin/ldap restart"
-
-- name: restart proxy
-  shell: "{{ install_dir }}/bin/zmproxyctl restart"
-
 - name: sync puppet
   command: puppet agent -t
+  register: command_result
   ignore_errors: yes
