--- a/emailops-build/roles/system-update/tasks/main.yml
+++ b/emailops-build/roles/system-update/tasks/main.yml
@@ -8,7 +8,8 @@
     name=*
     state=latest
     update_cache=yes
+  notify:
+    - sync puppet
 
-- name: Sync with puppet master
-  command: /usr/bin/puppet agent -t
-  ignore_errors: yes
+- meta:
+    flush_handlers
