happy monday _ bleh _

--- a/distributeProfile/ansible.cfg
+++ b/distributeProfile/ansible.cfg
@@ -16,7 +16,7 @@ deprecation_warnings            = TRUE
 display_skipped_hosts           = TRUE
 error_on_undefined_vars         = TRUE
 filter_plugins                  = /usr/lib/python2.7/site-packages/ansible/runner/filter_plugins
-forks                           = 100
+forks                           = 50
 gathering                       = smart
 inventory                       = hosts
 log_path                        = /home/khuntly/.log/ansible
@@ -27,15 +27,16 @@ pattern                         = *
 poll_interval                   = 15
 remote_user                     = khuntly
 system_warnings                 = TRUE
-timeout                         = 10
+timeout                         = 30
 vars_plugins                    = /usr/lib/python2.7/site-packages/ansible/runner/vars_plugins
 fact_caching                    = redis
+vault_password_file             = /home/khuntly/.etc/vault.txt
 
 [privilege_escalation]
-become                          = TRUE
+become                          = FALSE
 become_method                   = sudo
 become_user                     = root
-become_ask_pass                 = TRUE
+become_ask_pass                 = FALSE
 
 [ssh_connection]
 ssh_args                        = -o ControlMaster=auto -o ControlPersist=60s
