--- a/distributeProfile/group_vars/admin/ssh.yml
+++ b/distributeProfile/group_vars/admin/ssh.yml
@@ -6,5 +6,6 @@
 ##
 ## disks
 ##
-ssh_keyfile: /home/khuntly/.ssh/id_rsa.pub
-ssh_privkey: /home/khuntly/.ssh/id_rsa
+ssh_keyfile: "{{ remote_home }}/.ssh/id_rsa.pub"
+ssh_privkey: "{{ remote_home }}/.ssh/id_rsa"
+key_options: "from=172.17.35.*,172.16.6.*,172.17.40.*"
