--- a/emailops-build/roles/build-nginx/tasks/run-postinstall.yml
+++ b/emailops-build/roles/build-nginx/tasks/run-postinstall.yml
@@ -31,6 +31,8 @@
 
 - name: (POSTINSTALL) Generate 2048 bit DH key for nginx (logjam)
   command: "/usr/bin/openssl dhparam -out {{ dhparam_output }} {{ dhparam_keysize }}"
+  args:
+    creates: "{{ dhparam_output }}"
 
 ##
 ## Update nginx config
